--- a/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
+++ b/Trackify/app/src/main/res/layout/playlists_track_header_item.xml
@@ -10,52 +10,64 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:adjustViewBounds="true"
+        android:contentDescription="@string/playlist_cover_description"
+        android:scaleType="centerCrop"
         app:layout_constraintDimensionRatio="1.05"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/placeholder_playlist"
-        tools:scaleType="center" />
+        app:srcCompat="@drawable/placeholder_playlist" />
 
-    <Button
-        android:id="@+id/spotify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Play on Spotify"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/placeholder_fade"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/wrapper"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="?android:colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cover" />
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:lineSpacingMultiplier="0.9"
-        android:text="@tools:sample/lorem"
-        android:textColor="?android:attr/textColorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spotify" />
+        android:background="@drawable/background_round_corner"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/screen_margin_horizontal"
+        android:paddingTop="12dp"
+        android:paddingEnd="@dimen/screen_margin_horizontal"
+        android:translationY="-15dp"
+        app:layout_constraintTop_toBottomOf="@+id/cover">
 
-    <TextView
-        android:id="@+id/owner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:lineSpacingMultiplier="0.9"
-        android:text="@tools:sample/lorem"
-        android:textColor="?android:attr/textColorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/unfollow"
-        app:layout_constraintStart_toEndOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/spotify" />
+        <Button
+            android:id="@+id/spotify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/play_on_spotify" />
 
-    <Button
-        android:id="@+id/unfollow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Unfollow"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spotify" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lineSpacingMultiplier="0.9"
+            android:textColor="?android:attr/textColorPrimary"
+            tools:text="@tools:sample/lorem" />
+
+        <TextView
+            android:id="@+id/owner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:attr/textColorPrimary"
+            tools:text="@tools:sample/lorem" />
+
+        <Button
+            android:id="@+id/unfollow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unfollow_button" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
