--- a/Trackify/app/src/main/res/values/colors.xml
+++ b/Trackify/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="raisin_black">#262833</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="success">#38EE1C</color>
 
     <!-- placeholders -->
     <color name="placeholder_tint">#262626</color>
