--- a/Trackify/app/src/main/res/values/dimens.xml
+++ b/Trackify/app/src/main/res/values/dimens.xml
@@ -21,4 +21,10 @@
     <dimen name="item_track_title">13dp</dimen>
     <dimen name="item_track_subtitle">11dp</dimen>
     <dimen name="item_track_cover_margin">7dp</dimen>
+
+    <!-- playlists create layout -->
+    <dimen name="playlists_create_layout_padding">16dp</dimen>
+    <dimen name="playlists_create_layout_horizontal_padding">24dp</dimen>
+    <dimen name="playlists_create_layout_vertical_padding">16dp</dimen>
+    <dimen name="playlists_create_text_size">18sp</dimen>
 </resources>
