--- a/Trackify/app/src/main/res/layout-sw600dp-land/playlists_track_add_item.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp-land/playlists_track_add_item.xml
@@ -19,10 +19,10 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/cover"
-            android:layout_width="@dimen/common_icon_size"
-            android:layout_height="@dimen/common_icon_size"
-            android:layout_marginTop="@dimen/item_track_cover_margin"
-            android:layout_marginBottom="@dimen/item_track_cover_margin"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="4dp"
+            android:textSize="18dp"
             app:layout_constraintBottom_toTopOf="@+id/artists"
             app:layout_constraintEnd_toStartOf="@+id/add"
             app:layout_constraintStart_toEndOf="@+id/cover"
@@ -44,8 +45,8 @@
 
         <ImageView
             android:id="@+id/explicit"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             app:layout_constraintBottom_toBottomOf="@id/artists"
             app:layout_constraintStart_toStartOf="@+id/name"
             app:layout_constraintTop_toTopOf="@+id/artists"
@@ -59,6 +60,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
+            android:textSize="12dp"
             app:layout_constraintBottom_toBottomOf="@+id/cover"
             app:layout_constraintEnd_toStartOf="@+id/add"
             app:layout_constraintStart_toEndOf="@+id/explicit"
