--- a/Trackify/app/src/main/res/values-sw600dp-land/dimens.xml
+++ b/Trackify/app/src/main/res/values-sw600dp-land/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <!-- playlists create layout -->
     <dimen name="playlists_create_layout_padding">24dp</dimen>
+    <dimen name="playlists_create_search_layout_padding_bottom">16dp</dimen>
+    <dimen name="playlists_create_search_layout_padding_horizontal">48dp</dimen>
     <dimen name="playlists_create_layout_horizontal_padding">32dp</dimen>
     <dimen name="playlists_create_layout_vertical_padding">24dp</dimen>
     <dimen name="playlists_create_text_size">24sp</dimen>
