--- a/Trackify/app/src/main/res/layout/routes_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout/routes_create_fragment.xml
@@ -2,16 +2,19 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize" />
+            android:layout_height="?attr/actionBarSize"
+            app:menu="@menu/routes_create_menu" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,47 +26,37 @@
             android:id="@+id/mapView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="56dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="57dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:background="@color/green_blue_crayola"
-            app:layout_constraintBottom_toBottomOf="@+id/start_coordinates"
+            app:layout_constraintBottom_toTopOf="@+id/start_coordinates"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/shareButton" />
-
-        <Button
-            android:id="@+id/shareButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="16dp"
-            android:text="@string/share_button"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/playlist_to_share_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginTop="8dp"
             android:text="@string/playlist_to_share_title"
-            app:layout_constraintEnd_toEndOf="@+id/end_coordinates"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/end_coordinates" />
 
         <EditText
             android:id="@+id/start_coordinates"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="21dp"
             android:layout_marginTop="313dp"
             android:autofillHints="@string/start_hint"
             android:ems="10"
             android:inputType="text"
             android:labelFor="@id/start_title"
-            app:layout_constraintStart_toEndOf="@+id/start_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -90,12 +83,13 @@
             android:id="@+id/end_coordinates"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="14dp"
+            android:layout_marginTop="8dp"
             android:autofillHints="@string/end_hint"
             android:ems="10"
             android:inputType="text"
             android:labelFor="@id/end_title"
-            app:layout_constraintStart_toStartOf="@+id/start_coordinates"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/start_coordinates" />
 
         <TextView
@@ -116,14 +110,17 @@
             app:layout_constraintBaseline_toBaselineOf="@+id/end_coordinates"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="11dp"
-            android:layout_marginEnd="30dp"
+            android:layout_marginEnd="8dp"
             android:background="@color/black"
             android:choiceMode="singleChoice"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:itemCount="3"
+            tools:listitem="@layout/routes_create_playlist_item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
