--- a/Trackify/app/src/main/res/values/themes.xml
+++ b/Trackify/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="Theme.Trackify" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- primary color -->
@@ -30,15 +30,5 @@
         <!-- -->
         <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
         <item name="bottomNavigationStyle">@style/Widget.App.BottomNavigationView</item>
-    </style>
-
-    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/raisin_black</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
-        <item name="windowSplashScreenAnimationDuration">500</item>
-        <item name="android:windowSplashScreenBrandingImage" tools:ignore="NewApi">
-            @drawable/placeholder_branding
-        </item>
-        <item name="postSplashScreenTheme">@style/Theme.Trackify</item>
     </style>
 </resources>
