Bug fix toolbar height on tablets

--- a/Trackify/app/src/main/res/layout-sw600dp-land/playlists_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout-sw600dp-land/playlists_create_fragment.xml
@@ -7,13 +7,14 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/playlists_create_menu"/>
+            app:menu="@menu/playlists_create_menu" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
@@ -37,10 +38,10 @@
                 android:backgroundTint="@color/white"
                 android:backgroundTintMode="src_in"
                 android:hint="@string/form_title"
+                android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 android:textColor="@color/white"
-                android:textSize="@dimen/playlists_create_text_size"
-                android:importantForAutofill="no" />
+                android:textSize="@dimen/playlists_create_text_size" />
 
             <TextView
                 android:id="@+id/playlistDurationText"
@@ -62,12 +63,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="@string/form_min_input"
+                    android:importantForAutofill="no"
                     android:inputType="number"
                     android:paddingHorizontal="@dimen/playlists_create_layout_horizontal_padding"
                     android:textAlignment="center"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/playlists_create_text_size"
-                    android:importantForAutofill="no" />
+                    android:textSize="@dimen/playlists_create_text_size" />
 
                 <TextView
                     android:id="@+id/minText"
