--- a/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
+++ b/Trackify/app/src/main/res/layout-w600dp/routes_create_fragment.xml
@@ -6,7 +6,8 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
@@ -22,19 +23,19 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="200dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
             android:background="@color/black"
             android:choiceMode="singleChoice"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:itemCount="3"
-            tools:listitem="@layout/routes_create_playlist_item"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/mapView3"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:itemCount="3"
+            tools:listitem="@layout/routes_create_playlist_item" />
 
         <TextView
             android:id="@+id/playlist_to_share_title"
