--- a/Trackify/app/src/main/res/layout/playlists_create_search_fragment.xml
+++ b/Trackify/app/src/main/res/layout/playlists_create_search_fragment.xml
@@ -45,8 +45,9 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvSearchedSongs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:paddingHorizontal="@dimen/playlists_create_search_layout_padding_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
             tools:itemCount="5"
