--- a/Trackify/app/src/main/res/navigation/routes_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/routes_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/routes_fragment"
-        android:name="com.apm.trackify.ui.routes.RoutesLandingFragment"
+        android:name="com.apm.trackify.ui.routes.landing.RoutesLandingFragment"
         tools:layout="@layout/routes_landing_fragment">
 
         <action
