--- a/Trackify/app/src/main/res/navigation/user_navigation.xml
+++ b/Trackify/app/src/main/res/navigation/user_navigation.xml
@@ -7,6 +7,6 @@
 
     <fragment
         android:id="@+id/user_fragment"
-        android:name="com.apm.trackify.ui.user.UserLandingFragment"
+        android:name="com.apm.trackify.ui.user.landing.UserLandingFragment"
         tools:layout="@layout/user_landing_fragment" />
 </navigation>
